--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,31 +77,31 @@
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> Background Removal Latency </div>
-                <div class="latency-value medium-light"> 5 ms </div>
+                <div class="latency-value medium-light hidden"> 5 ms </div>
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> Transcription Latency </div>
-                <div class="latency-value medium-light" id="trans-lat"> 0ms </div>
+                <div class="latency-value medium-light hidden" id="trans-lat"> 0ms </div>
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> Intonation Encoder Latency </div>
-                <div class="latency-value medium-light" id="aud-lat"> 0ms </div>
+                <div class="latency-value medium-light hidden" id="aud-lat"> 0ms </div>
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> Empathy Model(s) Latency </div>
-                <div class="latency-value medium-light" id="emp-lat"> 0ms </div>
+                <div class="latency-value medium-light hidden" id="emp-lat"> 0ms </div>
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> LLM Latency </div>
-                <div class="latency-value medium-light" id="llm-lat"> 0ms </div>
+                <div class="latency-value medium-light hidden" id="llm-lat"> 0ms </div>
             </div>
             <div class="metric-box">
-                <div class="metric-title medium-light"> TTS Latency</div>
-                <div class="latency-value medium-light" id="tts-lat"> 0ms </div>
+                <div class="metric-title medium-light"> Audio Decoder</div>
+                <div class="latency-value medium-light hidden" id="tts-lat"> 0ms </div>
             </div>
             <div class="metric-box">
                 <div class="metric-title medium-light"> Animation Model(s) Latency</div>
-                <div class="latency-value medium-light" id="ani-lat"> 0ms </div>
+                <div class="latency-value medium-light hidden" id="ani-lat"> 0ms </div>
             </div>
 
             <div class="metric-box light small">
